--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     href=“https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap”
     rel=“stylesheet”>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)" />
   </head>
   <body>
     <header>
@@ -18,7 +19,7 @@
         <p>
           Batatabit te ayuda a navegar entre los diferentes precios y tendencias
         </p>
-        <a href="" class="header--button">
+        <a href="#plans" class="header--button">
           Conoce nuestros planes <span></span>
         </a>
       </div>
@@ -93,10 +94,99 @@
           </div>
         </section>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="main-product-detail">
+        <span class="product-detail--batata-logo"></span>
+        <div class="product-detail--title">
+          <h2>Creamos un producto sin comparación.</h2>
+          <p>Confiable y diseñado para su uso diario.</p>
+        </div>
+        <section class="product-cards--container">
+          <article class="product-detail--card">
+            <span class="clock"></span>
+            <p class="product--card-title">Tiempo Real</p>
+            <p class="product--card-body">
+              Nuestro API toma información minuto a minuto sobre las tasas que
+              más determinan el comportamiento.
+            </p>
+          </article>
+          <article class="product-detail--card">
+            <span class="eye"></span>
+            <p class="product--card-title">No hay tasas escondidas</p>
+            <p class="product--card-body">
+              Ni en la compra o al momento de exit, Batabit siempre te muestra
+              el costo real de lo que estás adquiriendo.
+            </p>
+          </article>
+          <article class="product-detail--card">
+            <span class="dollar"></span>
+            <p class="product--card-title">Compara monedas</p>
+            <p class="product--card-body">
+              No más rumores, con Babtabit sabrás el valor real de cada moneda
+              en el mercado actual.
+            </p>
+          </article>
+          <article class="product-detail--card">
+            <span class="check"></span>
+            <p class="product--card-title">Información confiable</p>
+            <p class="product--card-body">
+              Nuestras fuentes están 100% verificadas y continuamos auditando su
+              contenido mientras se actualizan.
+            </p>
+          </article>
+        </section>
+      </section>
+      <section class="bitcoin-img-container">
+        <h2>Conócelo hoy.</h2>
+      </section>
+      <section id="plans" class="main-plans-container">
+        <div class="plans--title">
+          <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+          <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+        </div>
+        <section class="plans-container--slider">
+          <article class="plans-container--card black">
+            <div class="plan-info-container">
+              <h3 class="plan-card--title white">Pago Mensual</h3>
+              <p class="plan-card--price white"><span>$</span>19</p>
+              <button class="plan-card--cta black white">
+                Escoger este <span></span>
+              </button>
+            </div>
+          </article>
+          <article class="plans-container--card">
+            <p class="recommended">Recomendado</p>
+            <div class="plan-info-container">
+              <h3 class="plan-card--title">Pago Anual</h3>
+              <p class="plan-card--price"><span>$</span>99</p>
+              <p class="plan-card--saving">
+                *Ahorras $129 comparado al plan mensual.
+              </p>
+              <button class="plan-card--cta">Escoger este <span></span></button>
+            </div>
+          </article>
+          <article class="plans-container--card black">
+            <div class="plan-info-container">
+              <h3 class="plan-card--title white">Pago Único</h3>
+              <p class="plan-card--price white"><span>$</span>300</p>
+              <button class="plan-card--cta black white">
+                Escoger este <span></span>
+              </button>
+            </div>
+          </article>
+        </section>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="left">
+        <ul>
+          <li><a href="#">Linkedin</a></li>
+          <li><a href="#">Crunchbase</a></li>
+          <li><a href="#">HackerNewas</a></li>
+        </ul>
+      </section>
+      <section class="right">
+        <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2020" />
+      </section>
+    </footer>
   </body>
 </html>
